name: redis
author: Anders Conbere <aconbere@conbere.org>
license: OtherLicense
license-file: LICENSE
version: 0.4
homepage: http://github.com/aconbere/redis
synopsis: a haskell redis client
description: a learning project for using sockets, etc.
build-type: Simple
cabal-version: >= 1.2

library
    exposed-modules: Redis,
                     Redis.Base,
                     Redis.Commands,
                     Redis.Commands.Set,
                     Redis.Commands.List,
                     Redis.Commands.SortedSet
    build-depends: base,
                   network
